Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -3,7 +3,7 @@
 = _Table of Contents_ =
 ----
 
-* [SPARCSIMAnOverview An Overview]
+* [Overview An Overview]
 
 * [SystemComponents System Components]
     * [UserInterface User Interface]
