Edited wiki page TableOfContents through web user interface.

--- a/wiki/TableOfContents.wiki
+++ b/wiki/TableOfContents.wiki
@@ -11,8 +11,9 @@
     * [CustomLibrary Custom Library]
     * [ThirdPartyLibrary Third - party Library]
     * [ConfigurationFile Configuration File]
-  * [Commands Simulator Commands]
   * [DevelopmentEnvironment Development Environment]
+  * [Compilation Compiling from source]
+  * [Commands Simulator Commands]
   * [Simulation Simulation]
   * [CodeOrganization Code Organization]
   * [References References]
